--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+index.html
 
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Food Comunity</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <h4>Food Comunity</h4>
+      </div>
+
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Tentang</a></li>
+        <li><a href="">Visi & Misi</a></li>
+        <li><a href="">Bergabung</a></li>
+      </ul>
+
+      <div class="menu-toggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+    <script src="script.js"></script>
+  </body>
+</html>
